[gd_scene load_steps=31 format=2]

[ext_resource path="res://Assets/Sprites/organic_shop/stall_selected.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/organic_shop/holo_seed.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/organic_shop/holo_grains.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/organic_shop/holo_fruit_selected.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/organic_shop/holo_beans.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/organic_shop/holo_power.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/organic_shop/holo_seed_selected.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/organic_shop/holo_grains_selected.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/organic_shop/holo_fruit.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/organic_shop/holo_beans_selected.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/organic_shop/stall.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/organic_shop/holo_power_selected.png" type="Texture" id=12]
[ext_resource path="res://Scripts/HoloSeller.gd" type="Script" id=13]
[ext_resource path="res://Assets/Sprites/general/refresh.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/general/refresh_selected.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/general/checkbox_selected.png" type="Texture" id=16]
[ext_resource path="res://Assets/Sprites/general/checkbox.png" type="Texture" id=17]
[ext_resource path="res://Assets/Sprites/general/checkbox_hover.png" type="Texture" id=18]
[ext_resource path="res://Assets/Sprites/general/input_field.png" type="Texture" id=19]
[ext_resource path="res://Assets/Fonts/My_handwritten_font-Regular.ttf" type="DynamicFontData" id=20]
[ext_resource path="res://Assets/Sprites/organic_shop/star.png" type="Texture" id=21]
[ext_resource path="res://Assets/Sprites/solar_panel_farm/add_panel.png" type="Texture" id=22]
[ext_resource path="res://Assets/Sprites/solar_panel_farm/add_panel_selected.png" type="Texture" id=23]
[ext_resource path="res://Assets/Sprites/organic_shop/customer.png" type="Texture" id=24]
[ext_resource path="res://Assets/Sprites/organic_shop/customer_bar.png" type="Texture" id=25]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
font_data = ExtResource( 20 )

[sub_resource type="DynamicFont" id=2]
size = 18
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 20 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 19 )
region_rect = Rect2( 0, 0, 240, 100 )
margin_left = 10.0

[sub_resource type="DynamicFont" id=4]
size = 24
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 20 )

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( -13.8898, -6.34961, 13.8898, 6.34961, 49.8583, 104.327, -7.73858, 5.15905, 7.73858, -5.15905, 97.6788, 105.517 )
}

[node name="HoloSellerSlot" type="VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddShop" type="TextureButton" parent="."]
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
texture_normal = ExtResource( 22 )
texture_pressed = ExtResource( 23 )
texture_hover = ExtResource( 23 )
expand = true

[node name="Label" type="Label" parent="AddShop"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -30.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoloSeller" type="TextureButton" parent="."]
visible = false
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
toggle_mode = true
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="CenterContainer" parent="HoloSeller"]
visible = false
anchor_right = 1.053
margin_right = -7.95001
margin_bottom = 50.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="HoloSeller/Center"]
margin_left = 22.0
margin_right = 126.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="Power" type="TextureButton" parent="HoloSeller/Center/HBox"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
rect_pivot_offset = Vector2( 25, 25 )
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )
expand = true

[node name="PriceTag" type="Label" parent="HoloSeller/Center/HBox/Power"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -18.0
custom_fonts/font = SubResource( 2 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Produce" type="TextureButton" parent="HoloSeller/Center/HBox"]
margin_left = 54.0
margin_right = 104.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
expand = true

[node name="HBox2" type="HBoxContainer" parent="HoloSeller/Center"]
visible = false
margin_left = -5.0
margin_right = 153.0
margin_bottom = 50.0

[node name="Grain" type="TextureButton" parent="HoloSeller/Center/HBox2"]
margin_top = -1.85185
margin_right = 50.0
margin_bottom = 48.1481
rect_min_size = Vector2( 50, 50 )
size_flags_vertical = 0
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )
expand = true

[node name="PriceTag" type="Label" parent="HoloSeller/Center/HBox2/Grain"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -18.0
custom_fonts/font = SubResource( 2 )
align = 2

[node name="Fruit" type="TextureButton" parent="HoloSeller/Center/HBox2"]
margin_left = 54.0
margin_top = 1.85185
margin_right = 104.0
margin_bottom = 51.8519
rect_min_size = Vector2( 50, 50 )
toggle_mode = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
expand = true

[node name="PriceTag" type="Label" parent="HoloSeller/Center/HBox2/Fruit"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -18.0
custom_fonts/font = SubResource( 2 )
align = 2

[node name="Beans" type="TextureButton" parent="HoloSeller/Center/HBox2"]
margin_left = 108.0
margin_top = -1.85185
margin_right = 158.0
margin_bottom = 48.1481
rect_min_size = Vector2( 50, 50 )
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )
expand = true

[node name="PriceTag" type="Label" parent="HoloSeller/Center/HBox2/Beans"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -18.0
custom_fonts/font = SubResource( 2 )
align = 2

[node name="Refresh" type="TextureButton" parent="HoloSeller"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -25.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
toggle_mode = true
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )
texture_hover = ExtResource( 15 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Price" type="HBoxContainer" parent="HoloSeller"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -61.0
margin_top = -20.0
margin_right = 61.0
margin_bottom = 20.0
size_flags_horizontal = 4
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Input" type="LineEdit" parent="HoloSeller/Price"]
margin_right = 82.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 0 )
size_flags_horizontal = 4
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
caret_blink = true

[node name="Check" type="TextureButton" parent="HoloSeller/Price"]
margin_left = 82.0
margin_right = 122.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
size_flags_horizontal = 0
toggle_mode = true
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 18 )
expand = true

[node name="Customer" type="Timer" parent="HoloSeller"]
autostart = true

[node name="Rating" type="Control" parent="HoloSeller"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OneStar" type="Position2D" parent="HoloSeller/Rating"]
position = Vector2( 34, 128 )

[node name="Star" type="TextureRect" parent="HoloSeller/Rating/OneStar"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.5
margin_top = -12.9719
margin_right = 12.5
margin_bottom = 12.0281
rect_min_size = Vector2( 25, 25 )
rect_pivot_offset = Vector2( 12, 12 )
texture = ExtResource( 21 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TwoStar" type="Position2D" parent="HoloSeller/Rating"]
position = Vector2( 48, 145 )

[node name="Star" type="TextureRect" parent="HoloSeller/Rating/TwoStar"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.5
margin_top = -12.5
margin_right = 12.5
margin_bottom = 12.5
rect_min_size = Vector2( 25, 25 )
rect_pivot_offset = Vector2( 12, 12 )
texture = ExtResource( 21 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThreeStar" type="Position2D" parent="HoloSeller/Rating"]
position = Vector2( 75, 150 )

[node name="Star" type="TextureRect" parent="HoloSeller/Rating/ThreeStar"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.5
margin_top = -12.5
margin_right = 12.5
margin_bottom = 12.5
rect_min_size = Vector2( 25, 25 )
rect_pivot_offset = Vector2( 12, 12 )
texture = ExtResource( 21 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FourStar" type="Position2D" parent="HoloSeller/Rating"]
position = Vector2( 102, 145 )

[node name="Star" type="TextureRect" parent="HoloSeller/Rating/FourStar"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.5
margin_top = -12.5
margin_right = 12.5
margin_bottom = 12.5
rect_min_size = Vector2( 25, 25 )
rect_pivot_offset = Vector2( 12, 12 )
texture = ExtResource( 21 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FiveStar" type="Position2D" parent="HoloSeller/Rating"]
position = Vector2( 116, 128 )

[node name="Star" type="TextureRect" parent="HoloSeller/Rating/FiveStar"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.5
margin_top = -12.5
margin_right = 12.5
margin_bottom = 12.5
rect_min_size = Vector2( 25, 25 )
rect_pivot_offset = Vector2( 12, 12 )
texture = ExtResource( 21 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CustomerBar" type="MarginContainer" parent="HoloSeller"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1.0
margin_bottom = -1.0
mouse_filter = 2
custom_constants/margin_right = 37
custom_constants/margin_top = 57
custom_constants/margin_left = 37
custom_constants/margin_bottom = 17
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar" type="TextureRect" parent="HoloSeller/CustomerBar"]
margin_left = 37.0
margin_top = 57.0
margin_right = 112.0
margin_bottom = 132.0
rect_min_size = Vector2( 75, 75 )
mouse_filter = 2
texture = ExtResource( 25 )
expand = true

[node name="Path" type="Path2D" parent="HoloSeller/CustomerBar"]
curve = SubResource( 5 )

[node name="PathFollow" type="PathFollow2D" parent="HoloSeller/CustomerBar/Path"]
position = Vector2( 49.8583, 104.327 )
rotation = 0.37014
loop = false

[node name="Customer" type="TextureRect" parent="HoloSeller/CustomerBar/Path/PathFollow"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 40, 40 )
rect_pivot_offset = Vector2( 20, 20 )
mouse_filter = 2
texture = ExtResource( 24 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="AddShop" to="." method="_on_AddShop_pressed"]
[connection signal="pressed" from="HoloSeller" to="." method="_on_HoloSeller_pressed"]
[connection signal="pressed" from="HoloSeller/Center/HBox/Power" to="." method="_on_Power_pressed"]
[connection signal="pressed" from="HoloSeller/Center/HBox/Produce" to="." method="_on_Produce_pressed"]
[connection signal="pressed" from="HoloSeller/Center/HBox2/Grain" to="." method="_on_Grain_pressed"]
[connection signal="pressed" from="HoloSeller/Center/HBox2/Fruit" to="." method="_on_Fruit_pressed"]
[connection signal="pressed" from="HoloSeller/Center/HBox2/Beans" to="." method="_on_Beans_pressed"]
[connection signal="pressed" from="HoloSeller/Refresh" to="." method="_on_Refresh_pressed"]
[connection signal="pressed" from="HoloSeller/Price/Check" to="." method="_on_Check_pressed"]
[connection signal="timeout" from="HoloSeller/Customer" to="." method="_on_Customer_timeout"]
